# HackNotts2022

./: .gitignore
Client/: CMakeLists.txt
Client/resources/source/: clouds.kra  ground.kra  platform.kra  player.kra
Client/src/: game.c  game.h  input.c  input.h  listener.c  listener.h  log.c  log.h  main.c  map.c  map.h  parse.c  parse.h  render.c  render.h  state.c  state.h
Documentation/: Protocols.md
HackNotts2022/: settings.gradle
HackNotts2022/HackNotts/src/main/java/Game/: Arena.java  Block.java  Bullet.java  Entity.java  GameController.java  GameState.java  Player.java
HackNotts2022/HackNotts/src/main/java/Main/: Bullet.java  Entity.java  GameState.java  GetIP.java  InputState.java  InputStates.java  Main.java  Player.java  Server.java
HackNotts2022/HackNotts/src/main/java/Server/: GetIP.java  InputState.java  InputStates.java  NetworkPlayer.java  PlayerManager.java  Server.java
